# bookstore_new

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dados_testes_order.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  pipeline.yml
book/: settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py  0002_order_updated_at.py  0003_order_product_order_quantity_order_user_and_more.py  0004_alter_order_quantity.py
order/models/: __init__.py  order.py
order/permissions/: __init__.py  custom.py
order/serializers/: __init__.py  order_serializers.py
order/tests/: test_api.py  test_crud.py  test_permissions.py
order/views/: __init__.py  order_views.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_category_created_at_category_description_and_more.py  0002_category_created_at_category_updated_at_and_more.py  0003_alter_product_created_at_alter_product_price.py
product/models/: __init__.py  category.py  product.py
product/permissions/: __init__.py  custom.py
product/serializers/: __init__.py  category_serializers.py  product_serializers.py
product/tests/: conftest.py  test_api.py  test_crud.py  test_permission.py
product/views/: __init__.py  category_views.py  product_views.py
